fixes footer so it does not force white space above itself

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,8 @@
 body {
-    background-color: #FCFAFA; 
+  background-color: #fcfafa;
 }
 
+.outer {
+  position: relative;
+  min-height: 100vh;
+}
